--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 gateway.ip = 172.17.192.1
-token.expiration_time = 50
+token.expiration_time = 23213123
 token.secret = murat
 login.url = /users/login
